--- a/index.html
+++ b/index.html
@@ -398,8 +398,41 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <!-- <p class="window-btn"></p> -->
-            <button class="close-btn" data-modal-close>
+            <p class="window-p">Оставьте свои данные, мы вам перезвоним</p>
+            <form class="form-order">
+                <label class="form-label">
+                    <span class="form-name">Имя</span>
+                    <input class="form-input" type="text" name="name">
+                    <svg class="form-svg" width="18" height="18">
+                        <use href="./images/icons.svg#person-black"></use>
+                    </svg>
+                </label>
+                <label class="form-label">
+                    <span class="form-name">Телефон</span>
+                    <input class="form-input" type="tel" name="phone">
+                    <svg class="form-svg" width="18" height="18">
+                        <use href="./images/icons.svg#phone-black"></use>
+                    </svg>
+                </label>
+                <label class="form-label">
+                    <span class="form-name">Почта</span>
+                    <input class="form-input" type="email" name="email">
+                    <svg class="form-svg" width="18" height="18">
+                        <use href="./images/icons.svg#email-black"></use>
+                    </svg>
+                </label>
+                <label class="form-label">
+                    <span class="form-name">Комментарий</span>
+                    <textarea class="form-textarea" name="comment" placeholder="Введите текст"></textarea>
+                </label>
+                <label class="agreement">
+                    <input class="agree-check" type="checkbox">
+                    <p class="agree-p">Соглашаюсь с рассылкой и принимаю
+                        <a class="agree-link" href="#">Условия договора</a>
+                    </p>
+                    <button class="form-btn" type="submit">Отправить</button>
+            </form>
+            <button class="close-btn" type="button" data-modal-close>
                 <svg width="11" height="11">
                     <use href="./images/icons.svg#vector"></use>
                 </svg>
