--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@
                 </label>
                 <label class="agreement">
                     <input class="agree-check" type="checkbox">
-                    <p class="agree-p">Соглашаюсь с рассылкой и принимаю
+                    <span class="agree-text">Соглашаюсь с рассылкой и принимаю
                         <a class="agree-link" href="#">Условия договора</a>
-                    </p>
+                    </span>
                     <button class="form-btn" type="submit">Отправить</button>
             </form>
             <button class="close-btn" type="button" data-modal-close>
