--- a/index.html
+++ b/index.html
@@ -427,13 +427,20 @@
                 </label>
                 <label class="agreement">
                     <input class="agree-check" type="checkbox">
-                    <span class="agree-text">Соглашаюсь с рассылкой и принимаю
+                    <span class="agree-text">Соглашаюсь с рассылкой и принимаю&nbsp
                         <a class="agree-link" href="#">Условия договора</a>
                     </span>
-                    <button class="form-btn" type="submit">Отправить</button>
+                    <!-- <div class="agree-check-img"></div>
+                    <div class="agree-check-svg">
+                        <svg class="form-svg" width="16" height="15">
+                            <use href="./images/icons.svg#icon-check"></use>
+                        </svg>
+                    </div> -->
+                </label>
+                <button class="form-btn" type="submit">Отправить</button>
             </form>
             <button class="close-btn" type="button" data-modal-close>
-                <svg width="11" height="11">
+                <svg class="close-btn-svg" width="11" height="11">
                     <use href="./images/icons.svg#vector"></use>
                 </svg>
             </button>
