--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                         <use href="./images/icons.svg#email-black"></use>
                     </svg>
                 </label>
-                <label class="form-label">
+                <label class="form-label-text">
                     <span class="form-name">Комментарий</span>
                     <textarea class="form-textarea" name="comment" placeholder="Введите текст"></textarea>
                 </label>
